# lattice_discovery

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  pull_request_check.yml
examples/: client.rs  server.rs
src/: error.rs  lib.rs  utility.rs
src/mdns/: announcer.rs  discovery.rs  find.rs  mod.rs
